--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -65,3 +65,10 @@
     font-size: 24px;
     font-weight: bold;
 }
+
+.table {
+    &__image {
+        max-width: 125px;
+        max-height: 125px;
+    }
+}
