edit start page, add schedule seeder and changed its db structure

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -79,3 +79,14 @@
         background: rgb(0, 132, 255);
     }
 }
+
+.dashboard {
+    &__link:hover {
+        cursor: pointer;
+    }
+    &__info {
+        &-box {
+            height: 100px !important;
+        }
+    }
+}
