--- a/public/css/app.css
+++ b/public/css/app.css
@@ -70661,3 +70661,11 @@ body.swal2-toast-column .swal2-toast .swal2-validation-message {
   background: #0084ff;
 }
 
+.dashboard__link:hover {
+  cursor: pointer;
+}
+
+.dashboard__info-box {
+  height: 100px !important;
+}
+
